# studica_ros2_control

./: .flake8  CMakeLists.txt  README.md  package.xml
.github/workflows/: ros-ci.yml
config/: params.yaml  params_sensors.yaml
include/studica_control/: gamepad_component.h
include/studica_ros2_control/: cobra_component.h  dc_encoder_component.h  diff_drive_component.h  diff_drive_odometry.h  dio_component.h  encoder_component.h  gamepad_component.h  imu_component.h  mecanum_drive_component.h  mecanum_drive_odometry.h  servo_component.h  sharp_component.h  titan_component.h  ultrasonic_component.h
launch/: gamepad_launch.py  indoor_mapping_launch.py  lidar_launch.py  lidar_launch.py.save  mapping2_launch.py  mapping_launch.py  nav2_launch.py  sensors_only.launch.py  studica_launch.py  tf_launch.py
src/: gamepad_teleop_main.cpp  manual_composition.cpp
src/components/: cobra_component.cpp  dc_encoder_component.cpp  diff_drive_component.cpp  diff_drive_odometry.cpp  dio_component.cpp  encoder_component.cpp  gamepad_component.cpp  imu_component.cpp  mecanum_drive_component.cpp  mecanum_drive_odometry.cpp  servo_component.cpp  sharp_component.cpp  titan_component.cpp  ultrasonic_component.cpp
